--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; style-src 'self' 'unsafe-inline';">
-  <link rel="icon" type="image/svg+xml" href="src/renderer/logo.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+	<meta charset="UTF-8" />
+	<link rel="icon" href="/favicon.ico" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Svelte + TS + Vite + Electron App</title>
 </head>
+
 <body>
-<div id="root"></div>
-<script type="module" src="./main.tsx"></script>
+	<div id="app"></div>
+	<script type="module" src="/main.ts"></script>
 </body>
+
 </html>
